front/components/PeriodicTableContainer/PeriodicTable/SearchBarContainer/SearchBar/style.css
.container {
  position: absolute;
  top: 2rem;
  display: inline-block;
  width: var(--table-width);
  text-align: center;
}

.searchBar {
  -webkit-appearance: none;
  border: none;
  background: var(--colours-blue-dark);
  height: 1.75rem;
  width: 16rem;
  color: var(--colours-grey-5);
  line-height: 1.75rem;
  font-size: 1.25rem;
  padding-left: 0.5rem;
  font-family: var(--font-family);
  outline: none;
}

.searchBar:focus {
  color: var(--colours-white-3);
  border-bottom: 2px solid var(--colours-blue-dark-2);
}

